# spy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXAMPLE.md  LICENSE  README.md  ROADMAP.md  SPEC.md  TEXT.md  ast.py  gen.py  loader.mjs  mkdocs.yml  mypy.ini  mypy.sh  package.json  pyodide.sh  pyproject.toml  reproduce_issue.spy  requirements.txt  setup.py  spy.sh  spyast.js  spyast.md  test_side_effects.spy  toyast.py
.github/workflows/: docs-preview-build.yml  docs-preview-cleanup.yml  docs-preview-deploy.yml  docs-preview.yml  docs.yml  jsffi.yml  pixi-checks.yml  playground-deploy.yml  playground-tests.yml  playground.yml  tests-pixi.yml  tests.yml
benchmarks/: README.md  conftest.py  test_check_ci.py  test_spy_bench.py
benchmarks/array_add/: Makefile  README.md  bench.spy  bench_numpy.py  lib_array1d.spy
benchmarks/array_simple/: Makefile  README.md  bench.spy  lib_array1d.spy
benchmarks/expected_output/: array_simple.txt  fibo.txt
benchmarks/fibo/: Makefile  README.md  fib.codon  fib.jl  fib.py  fib.spy
demo/: cstruct.spy  demo.spy  index.html  lldemo.spy  make.sh  raw_c_demo.c
docs/: index.md  mkdocs.yml
docs/plans/: llwasm-multi-module.md
docs/src/: contributing.md  demo_page.md  implementing-operators.md  index.md  llmem.md  test.md
examples/: README.md  annotated.spy  array.spy  array2d.spy  array3d.spy  blue_generic.spy  bluefunc.spy  bluefunc_adder.spy  bluefunc_pi.spy  conftest.py  deco.spy  dict-example.spy  dict_example.spy  exit_code.spy  factorial.spy  fibo.spy  fileio.spy  force_inline.spy  gc_stress.spy  generics.spy  hello.spy  hello_add.spy  icf.spy  io_low_level.spy  io_open.spy  metafunc.spy  metafunc_variadic.spy  mlir_example.spy  mlir_example2.spy  myarray.spy  pi.spy  point.spy  pow.spy  range.spy  smallpoint.spy  test_examples.py  type_name_and_fqn.spy  unroll.spy  unroll_nested_loops.spy  update_expected_output.py  (+1 more)
examples/1_high_level/: collections.spy  exit_code.spy  factorial.spy  fibo.spy  fileio.spy  hello.spy  hello_add.spy  hello_sub.spy  kwargs.spy  str_bytes.spy  var_const.spy  x.spy
examples/2_blue/: metafunc_variadic.spy
examples/2_metaprogramming/: blue_generic.spy  bluefunc_adder.spy  bluefunc_pi.spy  deco.spy  metafunc.spy  metafunc_variadic.spy
examples/3_low_level/: mem.spy  point.spy  smallpoint.spy
examples/4_advanced/: annotated.spy  convert.spy  generic_types.spy  myarray.spy  mytuple_contains.spy  type_name_and_fqn.spy
examples/aws_lambda/: _config.sh  aws_push.sh  aws_setup.sh  aws_teardown.sh  demo.spy  get_url.sh  hello.spy  mock_runtime.py  mock_test.sh  push.sh  spyapi.spy
examples/cffi/: README.md  setup.py  spydemo.spy
examples/debugger/: README.md  matrix.cpp  matrix.spy
examples/errors/: raise.spy  staticerror.spy  typeerror.spy
examples/expected_output/: annotated.txt  blue_generic.txt  bluefunc_adder.txt  bluefunc_pi.txt  collections.txt  convert.txt  dict_example.txt  exit_code.txt  fileio.txt  generic_types.txt  hello_add.txt  kwargs.txt  mem.txt  metafunc.txt  metafunc_variadic.txt  point.txt  smallpoint.txt  str_bytes.txt  type_name_and_fqn.txt  unroll_nested_loops.txt  var_const.txt  vector.txt
examples/failing_examples/: annotated.spy  gc_stress.spy
examples/gc_stress/: monitor_gc.sh
examples/jsffi/: README.md  demo.spy  index.html  lldemo.spy  make.sh  make_raw_c_demo.sh  raw_c_demo.c
examples/jsffi-canvas/: .gitignore  Makefile  README.md  create_html.py  demo.js  demo.spy  demo_image_data.js  demo_image_data.spy  demo_image_data_with_partial.spy  demo_particles.js  demo_particles.spy  make_html_js.py  make_html_spy.py  pyproject.toml  util_create_html.py
examples/multifile/: array.spy  dot.spy  main.spy  myarray.spy
examples/out-of-tree/: README.md
jsffi/: hello.html  jsffi.c  make.sh
playground/: Makefile  README.md  array.spy  bluefunc.spy  create_snippet.py  create_symlinks_spy_files.py  hello.spy  index.html  main.py  myarray.spy  point.spy  pyscript.toml  smallpoint.spy  spy_pyodide.mjs  spy_pyodide.sh  style.css
playground/spyast/: gen.py  spyast.js  toyast.py
playground/tests/: test_spyast_js.py
preview/: 404.html  index.html
preview/contributing/: index.html
preview/llmem/: index.html
preview/search/: search_index.json
pyodide/: README.md  package.json
spy/: __init__.py  __main__.py  ast.py  ast_dotdump.py  ast_dump.py  cbuild.py  cli.py  compiler.py  doppler.py  errfmt.py  errors.py  force_inline.py  fqn.py  fqn_parser.py  getzig.py  highlight.py  inliner.py  interop.py  linearize.py  llwasm.py  llwasm_pyodide.py  location.py  magic_py_parse.py  parser.py  platform.py  pywasm.py  rainbow.py  textbuilder.py  util.py
spy/analyze/: __init__.py  fmt.py  importing.py  irgen.py  scope.py  symtable.py
spy/backend/: html.py  interp.py  spy.py
spy/cli/: __init__.py  _dump.py  _format.py  _runners.py  _tb.py  base_args.py  build.py  cleanup.py  cli.py  execute.py  imports.py  parse.py  pyparse.py  redshift.py  spy_toml.py  spy_typer.py  support.py  symtable.py
spy/irgen/: __init__.py  __main__.py  codegen.py  codegen2.py  irgen.py  legacy_codegen.py  legacy_typechecker.py  modgen.py  module.py  multiop.py  ops.py  scope.py  symtable.py  typechecker.py
spy/libspy/: .clang-format  Makefile  Makefile.emcc  Makefile.native  Makefile.zig  __init__.py  bundle.py  bundle_cache.py  flags.py  make.sh
spy/llwasm/: __init__.py  base.py  emscripten.py  pyodide.py  wasmtime.py
spy/tests/: cffi_wrapper.py  conftest.py  (+44 more)
stdlib/: _builtins.spy  _bytes.spy  _dict.spy  _file.spy  _identity.spy  _io.spy  _list.spy  _print.spy  _range.spy  _slice.spy  _str.spy  _tuple.spy  array.spy  dict.spy  hash.py  hash.spy  os.spy  test_dict.spy  xxdemo.spy
stubs/: _ast.pyi  ast.pyi  astpretty.pyi
(+309 files in other folders)
