[project]
name = "spylang"
authors = [
    { name = "Antonio Cuni", email = "anto.cuni@gmail.com" }
]
version = "0.1.0"

dependencies = [
    "pytest==8.3.4",
    "py==1.11.0",
    "wasmtime==8.0.1; sys_platform != 'emscripten'",
    "fixedint==0.2.0",
    "mypy==1.3.0",
    "typer==0.15.1",
    "ziglang==0.13.0; sys_platform != 'emscripten'",

    "pytest_pyodide==0.58.4; sys_platform != 'emscripten'",
    "pyodide-py==0.27.2; sys_platform != 'emscripten'",
]

[project.urls]
Homepage = "https://github.com/spylang/spy"

[project.scripts]
spy = "spy.cli:pyproject_entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spy*"]

[tool.pytest.ini_options]
addopts = "--dist-dir=node_modules/pyodide"
markers = [
    "interp: mark tests executed with the 'interp' backend",
    "doppler: mark tests executed with the 'doppler' backend",
    "C: mark tests executed with the 'C' backend",
    "emscripten: mark tests executed via emscripten",
    "mypy: check mypy",
]
