[project]
name = "spylang"
authors = [
    { name = "Antonio Cuni", email = "anto.cuni@gmail.com" }
]
version = "0.1.0"

dependencies = [
    "pytest==8.3.4",
    "py==1.11.0",
    "wasmtime==8.0.1; sys_platform != 'emscripten'",
    "fixedint==0.2.0",
    "mypy==1.15.0",
    "typer==0.15.1",
    "ziglang==0.13.0; sys_platform != 'emscripten'",

    "pytest_pyodide==0.58.4; sys_platform != 'emscripten'",
    "pyodide-py==0.27.2; sys_platform != 'emscripten'",
]

[project.urls]
Homepage = "https://github.com/spylang/spy"

[project.scripts]
spy = "spy.cli:pyproject_entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spy*"]

[tool.pytest.ini_options]
addopts = "--dist-dir=pyodide/node_modules/pyodide"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

markers = [
    # compiler_backend
    "interp: use the 'interp' compiler backend",
    "doppler: use the 'doppler' compiler backend",
    "C: use the 'C' compiler backend",
    "emscripten: use the 'C' backend and run via emscripten",
    "py-cffi: build cffi-based CPython extensions",

    # llwasm_backend
    "wasmtime: use the 'wasmtime' llwasm backend",
    "pyodide: use the 'emscripten' llwasm backend and run the test on pyodide",

    # others
    "mypy: check mypy",
]
